# DVAP

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_soc_benchmark.py  003_campaigns_reports.py  004_fix_instance_timestamps.py  005_report_html.py
backend/app/: main.py
backend/app/api/v1/: benchmarks.py  campaigns.py  findings.py  health.py  instances.py  labs.py  reports.py  research.py  router.py  settings.py  soc.py
backend/app/core/: config.py  database.py  redis.py  seed.py
backend/app/data/labs/: 01_prompt_injection.json  02_memory_poisoning.json  03_rag_poisoning.json  04_tool_output_injection.json  05_mcp_security.json  06_browser_agent_security.json  07_multi_agent_security.json  08_ai_banking_platform.json  09_ai_supply_chain.json  10_autonomous_agent.json  11_data_exfiltration.json  12_agent_identity_trust.json  (+3 more)
backend/app/models/: __init__.py  base.py  benchmark.py  campaign.py  finding.py  lab.py  report.py  session.py  soc.py
backend/app/schemas/: common.py  finding.py  instance.py  lab.py
backend/app/services/: instance_service.py  lab_service.py  ollama_service.py  rate_limiter.py  report_service.py  soc_service.py  vector_service.py
backend/tests/: conftest.py  test_api_labs.py  test_instance_service.py  test_lab_service.py  test_rate_limiter.py  test_report_service.py  test_soc_service.py
(+86 files in other folders)
